// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api is working 1`] = `
Array [
  "http://localhost:4200/",
  Object {},
]
`;

exports[`api is working 2`] = `"api is working"`;

exports[`not found 1`] = `
Array [
  "http://localhost:4200/notFound",
  Object {},
]
`;

exports[`not found 2`] = `
Object {
  "data": null,
  "error": Object {
    "code": "NotFound",
    "info": null,
    "message": "404 not found",
    "status": 404,
  },
}
`;
